k8s/product/common/prod-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
    istio-injection: enabled
