k8s/product/common/prod-peerAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prod-peer
  namespace: prod
spec:
  mtls:
    mode: STRICT
