k8s/product/common/prod-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #     - tw-style.duckdns.org
  #   secretName: prod-secret-tls
  rules:
  - host: tw-style.duckdns.org
    http:
      paths:
      # - path: /api(/|$)(.*)
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: tws-spring-service
            port:
              number: 9091
