k8s/product/common/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - tw-style.duckdns.org
    secretName: prod-secret-tls
  rules:
  - host: tw-style.duckdns.org
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: tws-spring-service
            port:
              number: 9091
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tws-web-service
            port:
              number: 80
